# chill-gcode-viewer

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1737389251995-fad963681f2d3.mjs
.github/workflows/: main.yml  static.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/atoms/: ConfigState.ts  GcodeState.ts  ViewSetting.ts  ViewSettingState.ts
src/components/: ConfigModal.tsx  FileInput.tsx  FileInputLoader.tsx  FileOutput.tsx  GcodeEditor.tsx  GcodeToPath.tsx  GcodeViewer.tsx  Header.tsx  MainGcodeEV.tsx  MoveControler.tsx  ThemeToggle.tsx  ViewSetting.tsx
src/components/ConfigModal/: FilamentConfig.tsx  PrinterConfig.tsx  STLInput.tsx  ViewrConfig.tsx  index.tsx
src/components/Line3Object/: Line3.tsx  LineSegments3.js  LineSegments3Geometry.d.ts  LineSegments3Geometry.js
src/components/Line3Object/shaders/: vert_shader.glsl
src/components/LineSegmentObject/: LineSegmentObject.tsx
src/components/LineSegmentsObject/: Line3.tsx  LineSegments.tsx  LineSegments3.d.ts  LineSegments3.js  LineSegments3Geometry.d.ts  LineSegments3Geometry.js
src/components/LineSegmentsObject/shaders/: vert_shader.glsl
src/components/ViewerObjects/: LineSegmentObject.tsx
src/stores/: ConfigStore.ts  FilamentStore.ts  GcodeStore.ts  PrintResultStore.ts  PrinterStore.ts  ViewSettingStore.ts  configStore.ts  filamentStore.ts  gcodeStore.ts  printerStore.ts  viewSettingStore.ts
src/utils/: IsTauri.ts  fileIO.ts
